mylang/tests/fail/5.pas
program
var i: int;
begin

i := 5;
case(i) of
    : begin
        writeln(99)
    end
    3, 2: begin
        writeln(55)
    end
end

end@






